# AWSLambdaC-

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
scripts/: build.sh
src/: main.cpp
